@@ -51,16 +51,24 @@ src/connection-editor/nm-connection-editor-service-glue.h
 src/connection-editor/ce-resources.c
 src/connection-editor/ce-resources.h
 src/libnma/libnma.pc
+src/libnma/libnma-gtk4.pc
 src/libnma/NMA-1.0.gir
 src/libnma/NMA-1.0.typelib
+src/libnma/NMA4-1.0.gir
+src/libnma/NMA4-1.0.typelib
 src/libnma/nma-resources.c
 src/libnma/nma-resources.h
 src/libnma/nma-version.h
 src/libnma/tests/mobile-wizard
+src/libnma/tests/mobile-wizard-gtk4
 src/libnma/tests/run-vpn
+src/libnma/tests/run-vpn-gtk4
 src/libnma/tests/vpn-password-dialog
+src/libnma/tests/vpn-password-dialog-gtk4
 src/libnma/tests/wifi-dialog
+src/libnma/tests/wifi-dialog-gtk4
 src/libnma/tests/wifi-dialog-secrets
+src/libnma/tests/wifi-dialog-secrets-gtk4
 src/libnm-gtk/libnm-gtk.pc
 src/libnm-gtk/NMGtk-1.0.gir
 src/libnm-gtk/NMGtk-1.0.typelib
